@@ -9,8 +9,9 @@ wajig (2.01) unstable; urgency=low
   * CHANGELOG: change -x to -P; it's more meaningful shorter option to --pager
   * POLICY: more than one person has complained about removal of the alias of
     this command, AVAILABLE; I put it back.
+  * SHOW: add -f|--fast to offer apt-cache's much faster implementation
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 03 Nov 2010 21:30:04 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 03 Nov 2010 22:17:37 +0200
 
 wajig (2.0.50.1) unstable; urgency=low
 
